2000-07-10  Mark Kettenis  <kettenis@gnu.org>

	* resolv/nss_dns/dns-host.c (_nss_dns_gethostbyname2_r): Use
	res_hostalias instead of __hostalias for thread-safety.

2000-07-09  Mark Kettenis  <kettenis@gnu.org>

	* elf/rtld.c (dl_main): Move call to __libc_check_standard_fds...
	* sysdeps/generic/dl-sysdep.c (_dl_sysdep_start): ... to here.

2000-07-10  Ulrich Drepper  <drepper@redhat.com>

	* include/features.h: Include ISO C99 features if the compiler used
	is an ISO C99 compiler.
	Patch by Joseph S. Myers <jsm28@cam.ac.uk>.

2000-07-08  Mark Kettenis  <kettenis@gnu.org>

	* iconv/gconv_conf.c: Include <bits/libc-lock.h>.

2000-07-10  Andreas Jaeger  <aj@suse.de>

	* sysdeps/unix/sysv/linux/i386/sigaction.c: Make alias weak since
	it's overridden by libpthreads.
	* sysdeps/unix/sysv/linux/sigaction.c: Likewise.
	* sysdeps/unix/sysv/linux/arm/sigaction.c: Likewise.
	* sysdeps/unix/sysv/linux/ia64/sigaction.c: Likewise.
	* sysdeps/unix/sysv/linux/sparc/sparc32/sigaction.c: Likewise.
	* sysdeps/unix/sysv/linux/sparc/sparc64/sigaction.c: Likewise.

	* malloc/Makefile: Run tst-mtrace only with shared libs.

	* stdio-common/Makefile: Run unbputc and tst-printf tests only
	with shared libs.

2000-07-10  Maciej W. Rozycki  <macro@ds2.pg.gda.pl>

	* sysdeps/mips/dl-machine.h (elf_machine_runtime_link_map): Verify
	that gpreg really points to the GOT section of the calling object.
	Scan all PT_LOAD segments of objects for stub_pc, instead of only
	checking a start address of first one.
	Fix typos.
	* sysdeps/mips/mips64/dl-machine.h (elf_machine_runtime_link_map):
	Likewise.

	* sysdeps/mips/dl-machine.h (__dl_runtime_resolve): Fix a typo.

2000-07-10  Andreas Jaeger  <aj@suse.de>

	* sysdeps/unix/sysv/linux/sigaction.c: Fix typo
	(string_alias->strong_alias).

2000-07-08  Mark Kettenis  <kettenis@gnu.org>

	* hurd/hurd/fd.h: Include <cthreads.h> instead of <lock-intern.h>.

2000-07-07  Greg McGary  <greg@mcgary.org>
